[project]
name = "sleeper-pixel-performance"
version = "0.1.0"
description = "Visualize fantasy football roster performance with GitHub-style pixel grids"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.scripts]
sleeper-pixels = "sleeper_pixels.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
